--- a/src/style.css
+++ b/src/style.css
@@ -155,8 +155,8 @@ html {
   }
   
   .logo {
-    height: 1.4em !important;
-    width: 2.5em !important;
+    height: 1.9em !important;
+    width: 9.5em !important;
   }
   
   .navbar-nav .nav-link {
@@ -549,6 +549,139 @@ html {
     background-image: var(--section-background-color) !important;
     color: white !important;
   }
+  /* ----------------------------------------Contact Section------------------------------------ */
+  .contact{
+    position: relative !important;
+    padding-top: 150px !important;
+    padding-bottom: 30px !important;
+    background-image: var(--section-background-color) !important;
+    /* width: 100%; */
+    /* background-image: url("../src/components/assets/edu3.jpeg");  */
+
+    /* color: white !important; */
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px 50px;
+    padding: 100px 50px;
+    height: 100vh;
+  }
+  .contact .card{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 350px;
+    max-width: 100%;
+    height: 300px;
+    background-color: transparent !important;
+    /* background-image: url("../src/components/assets/edu3.jpeg"); */
+    border-radius: 20px;
+    transition: 0.5s;
+    /* box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15); */
+    box-shadow: 0 3px 3px 4px rgba(19, 5, 100, 0.561) !important;
+  }
+  .contact .card:hover{
+    height: 350px;
+    cursor: pointer;
+  }
+  .contact .card .img-box {
+    position: absolute;
+    top: 20px;
+    left: 23px;
+    width: 300px;
+    height: 220px;
+    background: #333;
+    border-radius: 12px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.contact .card:hover .img-box {
+    top: -100px;
+    scale: 0.75;
+    box-shadow: 0 15px 45px rgba(84, 8, 8, 0.2);
+}
+
+.contact .card .img-box img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.contact .card .content {
+  position: absolute;
+  top: 252px;
+  width: 100%;
+  height: 35px;
+  padding: 0 30px;
+  text-align: left;
+  overflow: hidden;
+  transition: 0.5s;
+
+}
+
+.contact .card:hover .content {
+  top: 100px;
+  height: 370px;
+}
+
+.contact .card .content h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  color: var(--clr);
+}
+
+.contact .card .content li {
+  color: #fff;
+  list-style: none;
+}
+.contact .card .content .button{
+  align-items: center;
+}
+
+.contact .card .content p {
+  position: relative;
+  top: 15px;
+  display: inline-block;
+  padding: 12px 25px;
+  text-decoration: none;
+  background: var(--clr);
+  color: white;
+  font-weight: 500;
+}
+
+.contact .card .content a:hover {
+  opacity: 0.8;
+}
+@media (max-width: 480px) {
+  .contact{
+    height: 100vh;
+  }
+  .contact .card {
+      width: 230px;
+      border-radius: 15px;
+  }
+
+  .contact .card .img-box {
+      width: 185px;
+      border-radius: 10px;
+  }
+
+  .contact .card .content li {
+      font-size: 0.8rem;
+  }
+
+  .contact .card .content p {
+      font-size: 0.9rem;
+  }
+}
+
   
   .tech-icons {
     font-size: 4.5em !important;
